@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.94 2004/11/06 11:57:14 h_oudejans Exp $
+$Id: ChangeLog,v 1.95 2004/11/06 13:51:33 manuelbi Exp $
 
 2004-11-06 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Removed all hard loopends used in combination with static arrays to
@@ -11,6 +11,7 @@ $Id: ChangeLog,v 1.94 2004/11/06 11:57:14 h_oudejans Exp $
 	  for finding some bugs. See his commit of today :)
 	* Internally renamed all Tape(1) stuff to Cassette
 	* Some layout tweaks (mainly esthetical) and added tool tip
+	* Made Rewind and Force Play buttons functional
 
 2004-10-16 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Fixed a problem with inserting a disk while openMSX is running.
